manifests/netshoot_current_1.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    istio.io/rev: default
    kubectl.kubernetes.io/default-container: netshoot
    kubectl.kubernetes.io/default-logs-container: netshoot
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"labels":{"app.kubernetes.io/name":"netshoot"},"name":"netshoot","namespace":"monitoring"},"spec":{"containers":[{"args":["bash","-c","tail -f /dev/null"],"image":"nicolaka/netshoot:v0.15","imagePullPolicy":"IfNotPresent","name":"netshoot","resources":{},"securityContext":{"capabilities":{"drop":["ALL"]}}}],"imagePullSecrets":[{"name":"private-registry"}],"serviceAccount":"default","serviceAccountName":"default"}}
    prometheus.io/path: /stats/prometheus
    prometheus.io/port: "15020"
    prometheus.io/scrape: "true"
    sidecar.istio.io/status: '{"initContainers":["istio-init","istio-proxy"[],"containers":null,"volumes":["workload-socket","credential-socket","workload-certs","istio-envoy","istio-data","istio-podinfo","istio-token","istiod-ca-cert","istio-ca-crl"[],"imagePullSecrets":["private-registry"],"revision":"default"}'
  creationTimestamp: "2026-03-02T12:57:25Z"
  generation: 1
  labels:
    app.kubernetes.io/name: netshoot
    security.istio.io/tlsMode: istio
    service.istio.io/canonical-name: netshoot
    service.istio.io/canonical-revision: latest
  name: netshoot
  namespace: monitoring
  resourceVersion: "289669"
  uid: a70a1be2-ce2a-4e81-92a9-700dd79e51f8
spec:
  containers:
  - args:
    - bash
    - -c
    - tail -f /dev/null
    image: nicolaka/netshoot:v0.15
    imagePullPolicy: IfNotPresent
    name: netshoot
    resources: {}
    securityContext:
      capabilities:
        drop:
        - ALL
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  imagePullSecrets:
  - name: private-registry
  nodeName: bb1-worker2
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext:
    fsGroup: 65534
    runAsGroup: 65534
    runAsNonRoot: true
    runAsUser: 65534
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - emptyDir: {}
    name: workload-socket
  - emptyDir: {}
    name: credential-socket
  - emptyDir: {}
    name: workload-certs
  - emptyDir:
      medium: Memory
    name: istio-envoy
  - emptyDir: {}
    name: istio-data
  - downwardAPI:
      defaultMode: 420
      items:
      - fieldRef:
          apiVersion: v1
          fieldPath: metadata.labels
        path: labels
      - fieldRef:
          apiVersion: v1
          fieldPath: metadata.annotations
        path: annotations
    name: istio-podinfo
  - name: istio-token
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          audience: istio-ca
          expirationSeconds: 43200
          path: istio-token
  - configMap:
      defaultMode: 420
      name: istio-ca-root-cert
    name: istiod-ca-cert
  - configMap:
      defaultMode: 420
      name: istio-ca-crl
      optional: true
    name: istio-ca-crl
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2026-03-04T09:30:56Z"
    observedGeneration: 1
    status: "True"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2026-03-02T12:57:28Z"
    observedGeneration: 1
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2026-03-04T09:31:50Z"
    observedGeneration: 1
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2026-03-04T09:31:50Z"
    observedGeneration: 1
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2026-03-02T12:57:25Z"
    observedGeneration: 1
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://3b417f42be086ee32e4d1b9911a26bd0b9fc09b1cb3ab8aa52203fc784d48ea7
    image: docker.io/nicolaka/netshoot:v0.15
    imageID: docker.io/nicolaka/netshoot@sha256:47b907d662d139d1e2f22bfe14f4efca1e3f1feed283572f47c970c780c03b61
    lastState:
      terminated:
        containerID: containerd://7499c4cea20b9c75456c2c7ddea1221ef2d41733147ddfe93fe6b025df17bffb
        exitCode: 255
        finishedAt: "2026-03-04T09:30:32Z"
        reason: Unknown
        startedAt: "2026-03-02T12:57:28Z"
    name: netshoot
    ready: true
    resources: {}
    restartCount: 1
    started: true
    state:
      running:
        startedAt: "2026-03-04T09:31:49Z"
    user:
      linux:
        gid: 65534
        supplementalGroups:
        - 65534
        uid: 65534
  hostIP: 172.18.0.4
  hostIPs:
  - ip: 172.18.0.4
  initContainerStatuses:
  - allocatedResources:
      cpu: 100m
      memory: 128Mi
    containerID: containerd://420535cd1d19e92055d788b57a65725072239d07591834678e4b17fe9e8a4221
    image: registry1.dso.mil/ironbank/opensource/istio/proxyv2:1.29.0
    imageID: registry1.dso.mil/ironbank/opensource/istio/proxyv2@sha256:f763539198275ae6d04c8ce3998661e8c120b306732d4839e00f57a3f9973ada
    lastState: {}
    name: istio-init
    ready: true
    resources:
      limits:
        cpu: "2"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 128Mi
    restartCount: 1
    started: false
    state:
      terminated:
        containerID: containerd://420535cd1d19e92055d788b57a65725072239d07591834678e4b17fe9e8a4221
        exitCode: 0
        finishedAt: "2026-03-04T09:30:57Z"
        reason: Completed
        startedAt: "2026-03-04T09:30:54Z"
    user:
      linux:
        gid: 0
        supplementalGroups:
        - 0
        - 65534
        uid: 0
  - allocatedResources:
      cpu: 100m
      memory: 128Mi
    containerID: containerd://e86a1be41e0a6742a871a66d8673d90e3856114b347cbe9ea582b848c85fa43d
    image: registry1.dso.mil/ironbank/opensource/istio/proxyv2:1.29.0
    imageID: registry1.dso.mil/ironbank/opensource/istio/proxyv2@sha256:f763539198275ae6d04c8ce3998661e8c120b306732d4839e00f57a3f9973ada
    lastState: {}
    name: istio-proxy
    ready: true
    resources:
      limits:
        cpu: "2"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 128Mi
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2026-03-04T09:31:01Z"
    user:
      linux:
        gid: 1337
        supplementalGroups:
        - 1337
        - 65534
        uid: 1337
    volumeMounts:
    - mountPath: /var/run/secrets/workload-spiffe-uds
      name: workload-socket
    - mountPath: /var/run/secrets/credential-uds
      name: credential-socket
    - mountPath: /var/run/secrets/workload-spiffe-credentials
      name: workload-certs
    - mountPath: /var/run/secrets/istio
      name: istiod-ca-cert
    - mountPath: /var/run/secrets/istio/crl
      name: istio-ca-crl
    - mountPath: /var/lib/istio/data
      name: istio-data
    - mountPath: /etc/istio/proxy
      name: istio-envoy
    - mountPath: /var/run/secrets/tokens
      name: istio-token
    - mountPath: /etc/istio/pod
      name: istio-podinfo
  observedGeneration: 1
  phase: Running
  podIP: 10.244.2.12
  podIPs:
  - ip: 10.244.2.12
  qosClass: Burstable
  startTime: "2026-03-02T12:57:25Z"
