manifests/debug-authorization-policy-metrics-server-allow-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: debug-metrics-server-allow-all
  namespace: metrics-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: metrics-server
  action: ALLOW
  rules:
   - {}
