manifests/netshoot.yaml
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
  labels:
    app.kubernetes.io/name: netshoot
    app.kubernetes.io/version: 0.0.1
  name: netshoot
  namespace: monitoring
spec:
  containers:
  - args: ["bash", "-c", "tail -f /dev/null"]
    image: nicolaka/netshoot:v0.15
    imagePullPolicy: IfNotPresent
    name: netshoot
    resources: {}
    securityContext:
      capabilities:
        drop:
        - ALL
  imagePullSecrets:
  - name: private-registry
  automountServiceAccountToken: true
  serviceAccount: monitoring-monitoring-kube-prometheus
  serviceAccountName: monitoring-monitoring-kube-prometheus
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
  labels:
  name: allow-egress-from-netshoot-to-any-ns-any-pod-any-port
  namespace: monitoring
spec:
  egress:
  - {}
  # egress:
  # - to:
  #   - namespaceSelector: {}
  #     podSelector: {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: netshoot
  policyTypes:
  - Egress
